@startuml

title __IDOSO's Class Diagram__\n

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.IdosoRequestDTO {
                - cep : String
                - dataNascimento : String
                - email : String
                - endereco : String
                - nome : String
                - senha : String
                - servicoIdosoRequestDTOList : List<ServicoIdosoRequestDTO>
                - telefone : String
                - usuario : String
                + IdosoRequestDTO()
                + IdosoRequestDTO()
                + getCep()
                + getDataNascimento()
                + getEmail()
                + getEndereco()
                + getNome()
                + getSenha()
                + getServicoDTOList()
                + getTelefone()
                + getUsuario()
                + setCep()
                + setDataNascimento()
                + setEmail()
                + setEndereco()
                + setNome()
                + setSenha()
                + setServicoDTOList()
                + setTelefone()
                + setUsuario()
            }
          }
        }
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.IdosoRequestDTO.Builder {
                - cep : String
                - dataNascimento : String
                - email : String
                - endereco : String
                - nome : String
                - senha : String
                - servicoIdosoRequestDTOList : List<ServicoIdosoRequestDTO>
                - telefone : String
                - usuario : String
                {static} + anIdosoDTO()
                + build()
                + withCep()
                + withDataNascimento()
                + withEmail()
                + withEndereco()
                + withNome()
                + withSenha()
                + withServicoDTOList()
                + withTelefone()
                + withUsuario()
                - Builder()
            }
          }
        }
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO {
                - dataFim : String
                - dataInicio : String
                - numero : String
                - tipoServico : String
                + ServicoIdosoRequestDTO()
                + ServicoIdosoRequestDTO()
                + getDataFim()
                + getDataInicio()
                + getNumero()
                + getTipoServico()
                + getVoluntarioServicoDTO()
                + setDataFim()
                + setDataInicio()
                + setNumero()
                + setTipoServico()
                + setVoluntarioServicoDTO()
            }
          }
        }
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO.Builder {
                - dataFim : String
                - dataInicio : String
                - numero : String
                - tipoServico : String
                {static} + aServicoDTO()
                + build()
                + withDataFim()
                + withDataInicio()
                + withNumero()
                + withTipoServico()
                + withVoluntarioServicoDTO()
                - Builder()
            }
          }
        }
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO {
                - cep : String
                - dataNascimento : String
                - email : String
                - endereco : String
                - nome : String
                - senha : String
                - sobrenome : String
                - telefone : String
                - usuario : String
                + VoluntarioServicoRequestDTO()
                + VoluntarioServicoRequestDTO()
                + getCep()
                + getDataNascimento()
                + getEmail()
                + getEndereco()
                + getNome()
                + getSenha()
                + getSobrenome()
                + getTelefone()
                + getUsuario()
                + setCep()
                + setDataNascimento()
                + setEmail()
                + setEndereco()
                + setNome()
                + setSenha()
                + setSobrenome()
                + setTelefone()
                + setUsuario()
            }
          }
        }
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      namespace dto.request {
        namespace servico {
          namespace idoso.idoso {
            class com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO.Builder {
                - cep : String
                - dataNascimento : String
                - email : String
                - endereco : String
                - nome : String
                - senha : String
                - sobrenome : String
                - telefone : String
                - usuario : String
                {static} + aVoluntarioDTO()
                + build()
                + withCep()
                + withDataNascimento()
                + withEmail()
                + withEndereco()
                + withNome()
                + withSenha()
                + withSobrenome()
                + withTelefone()
                + withUsuario()
                - Builder()
            }
          }
        }
      }
    }
  }
  

  com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.IdosoRequestDTO +-down- com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.IdosoRequestDTO.Builder
  com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO o-- com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO : voluntarioServicoRequestDTO
  com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO +-down- com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO.Builder
  com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.ServicoIdosoRequestDTO.Builder o-- com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO : voluntarioServicoRequestDTO
  com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO +-down- com.bomvizinho.microservice.boundary.controller.dto.request.servico.idoso.idoso.VoluntarioServicoRequestDTO.Builder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
